--- a/Mile.Mobility.NuGet/Mile.Mobility.nuspec
+++ b/Mile.Mobility.NuGet/Mile.Mobility.nuspec
@@ -11,7 +11,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Mile.Mobility</id>
-    <version>1.0.0.0</version>
+    <version>$version$</version>
     <description>Portable parts of the essential infrastructures</description>
     <authors>Kenji Mouri</authors>
     <projectUrl>https://github.com/ProjectMile/Mile.Mobility</projectUrl>
